--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-loader": "^8.2.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "css-loader": "^5.2.6",
+    "mini-css-extract-plugin": "^2.2.0",
     "node-sass": "^6.0.1",
     "regenerator-runtime": "^0.13.7",
     "sass-loader": "^12.1.0",
