--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel": "^6.23.0",
     "babel-runtime": "^6.26.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.10.6",
     "enzyme": "^3.11.0",
     "express": "^4.17.1",
     "node": "^16.0.0",
